--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    +materialized: view
-  mart:
+    mart:
       +materialized: table
+      finance:
+        +schema: finance
